--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://stuartandalivia.me",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.0",
@@ -18,10 +21,5 @@
     "@vitejs/plugin-react": "^4.1.0",
     "gh-pages": "^6.3.0",
     "vite": "^5.0.0"
-  },
-  "homepage": "https://stuartandalivia.me",
-    "scripts": {
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d dist"
-    }
+  }
 }
